added button class

--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
    <div id="alert_succes"></div>
    <div id="alert_info"></div>
 
+   <a id="button"></a>
+   <button id="button2"></button>
+
 </body>
 </html>
