--- a/index.html
+++ b/index.html
@@ -25,13 +25,22 @@
 </head>
 <body class="App">
 
-   <div id="alert"></div>
-   <div id="alert_error"></div>
-   <div id="alert_succes"></div>
-   <div id="alert_info"></div>
+    <div class="btn-group">
+        <a id="button_default"></a>
+        <button id="button_error"></button>
+        <button id="button_success"></button>
+        <button id="button_info"></button>
+    </div>
 
-   <a id="button"></a>
-   <button id="button2"></button>
+    <div id="alert"></div>
+    <div id="alert_error"></div>
+    <div id="alert_success"></div>
+    <div id="alert_info"></div>
+
+    <div class="btn-group">
+        <button id="button_enable"></button>
+        <button id="button_disabled"></button>
+    </div>
 
 </body>
 </html>
