--- a/index.html
+++ b/index.html
@@ -25,22 +25,12 @@
 </head>
 <body class="App">
 
-    <div class="btn-group">
-        <a id="button_default"></a>
-        <button id="button_error"></button>
-        <button id="button_success"></button>
-        <button id="button_info"></button>
-    </div>
+    <div id="alertButtons" class="btn-group"></div>
 
-    <div id="alert"></div>
-    <div id="alert_error"></div>
-    <div id="alert_success"></div>
-    <div id="alert_info"></div>
+    <div id="alerts"></div>
 
-    <div class="btn-group">
-        <button id="button_enable"></button>
-        <button id="button_disabled"></button>
-    </div>
+
+    <div id="toggleButtons" class="btn-group"></div>
 
 </body>
 </html>
