added icons to the buttons

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </script>
 </head>
 <body class="App">
+    <div id="div_icons"></div>
 
-    <div id="alertButtons" class="btn-group"></div>
+    <div id="div_alertButtons" class="btn-group"></div>
 
-    <div id="alerts"></div>
+    <div id="div_alerts"></div>
 
-
-    <div id="toggleButtons" class="btn-group"></div>
+    <div id="div_toggleButtons" class="btn-group"></div>
 
 </body>
 </html>
